<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/height_size"
                    android:text="@string/teamName1"
                    android:textColor="@color/colorScore"
                    android:textSize="@dimen/width_size"
                    android:textStyle="italic|bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/lakers" />

                <TextView
                    android:id="@+id/Lakers_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/width_size"
                    android:text="@string/zero"
                    android:textColor="@color/colorScore"
                    android:textSize="@dimen/value_size"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/one_runLakers"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_rl"
                    android:layout_marginRight="@dimen/margin_rl"
                    android:onClick="addOneForLakers"
                    android:text="@string/onePoint" />

                <Button
                    android:id="@+id/twoRunLakers"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_rl"
                    android:layout_marginRight="@dimen/margin_rl"
                    android:onClick="addTwoForLakers"

                    android:text="@string/twoPoint" />

                <Button
                    android:id="@+id/threeRunLakers"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_rl"
                    android:layout_marginRight="@dimen/margin_rl"
                    android:onClick="addThreeForLakers"
                    android:text="@string/threePoint" />

                <Button
                    android:id="@+id/foul_Lakers"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginEnd="@dimen/margin_rl"
                    android:layout_marginLeft="@dimen/margin_leftR"
                    android:layout_marginRight="@dimen/margin_rl"
                    android:layout_marginStart="@dimen/margin_leftR"
                    android:onClick="foulLakers"
                    android:text="@string/foulButtonText" />


            </LinearLayout>

            <View
                android:layout_width="@dimen/width_lay"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@android:color/darker_gray">

            </View>

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/margin_top"
                    android:text="@string/teamName2"
                    android:textColor="@color/colorScore"
                    android:textSize="@dimen/height_size"
                    android:textStyle="italic|bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/celtics" />

                <TextView
                    android:id="@+id/Celtics_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/margin_top"
                    android:text="@string/zero"
                    android:textColor="@color/colorScore"
                    android:textSize="@dimen/value_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/one_runCeltics"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_rl"
                    android:layout_marginRight="@dimen/margin_rl"
                    android:onClick="addOneForCeltics"
                    android:text="@string/onePoint" />

                <Button
                    android:id="@+id/two_RunCeltics"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_rl"
                    android:layout_marginRight="@dimen/margin_rl"
                    android:onClick="addTwoForCeltics"
                    android:text="@string/twoPoint" />

                <Button
                    android:id="@+id/threeRunCeltics"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_rl"
                    android:layout_marginRight="@dimen/margin_rl"
                    android:onClick="addthreeForCeltics"
                    android:text="@string/threePoint" />


                <Button

                    android:id="@+id/foul_Celtics"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginEnd="@dimen/margin_rl"
                    android:layout_marginLeft="@dimen/margin_leftR"
                    android:layout_marginRight="@dimen/margin_rl"
                    android:layout_marginStart="@dimen/margin_leftR"
                    android:onClick="foulCeltics"
                    android:text="@string/foulButtonText" />

            </LinearLayout>

        </LinearLayout>

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorReset"
            android:onClick="resetScore"
            android:text="@string/resetButtonText" />

    </RelativeLayout>


</ScrollView>